--- a/Curso practico de js/taller1/figuras.html
+++ b/Curso practico de js/taller1/figuras.html
@@ -7,7 +7,7 @@
     <title>Figuras Geometricas</title>
 </head>
 <body>
-    
+    <h1>hello word</h1>
 </body>
 <script src="./figuras.js"></script>
 </html>
