clase final taller 1

--- a/Curso practico de js/taller1/figuras.html
+++ b/Curso practico de js/taller1/figuras.html
@@ -6,8 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Figuras Geometricas</title>
 </head>
-<body>
-    <h1>hello word</h1>
-</body>
+<header>
+    <h1>figuras geometricas</h1>
+    <p>primer talle del curso de javaScript</p>
+</header>
+
+<section>
+    <form>
+        <h2>Calcula el area y Perimetro de un cuadrado</h2>
+        <label for="InputCuadrado">Escribe cuanto mide tu cuadrado:</label>
+        <input id="InputCuadrado" type="number" />
+        <button type="button" onClick="calcularPerimetroCuadrado()">
+            Calcular el perimetro
+        </button>
+        <button type="button" onClick="calcularAreaCuadrado()">
+            Calcular el area
+        </button>
+    </form>
+</section>
 <script src="./figuras.js"></script>
 </html>
